Reformat data, reorganisation to use data from mocked data or api

--- a/src/assets/sass/components/layout/_sidenav.scss
+++ b/src/assets/sass/components/layout/_sidenav.scss
@@ -5,13 +5,7 @@
   width: 117px;
   height: 100vh;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  //position: fixed;
+  //top: 0;
+  //left: 0;
 }
-
-.navbar {
-  display: flex;
-  width: 100%;
-  height: 91px;
-  background-color: black;
-}
-
-/*# sourceMappingURL=App.css.map */
