--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,64 @@
 .sidenav {
-  display: flex;
-  flex-direction: column;
-  background-color: black;
-  width: 117px;
-  height: 100vh;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+  position: relative;
+  z-index: 10;
 }
 
 .navbar {
   display: flex;
-  width: 100%;
-  height: 91px;
-  background-color: black;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 150px 0 20px;
+  height: 90px;
+  background-color: #020203;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  z-index: 60;
+  position: relative;
+}
+.navbar__logo {
+  padding-left: 8px;
+}
+.navbar__navlink {
+  display: flex;
+  color: #fff;
+  text-decoration: none;
+  font-size: 24px;
+}
+
+.session {
+  height: 263px;
+  width: 258px;
+  background-color: #ff0000;
+  border-radius: 5px;
+}
+
+.session__header h1 {
+  padding: 29px 29px 0 29px;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 200;
+  margin: 0 0 20px 0;
+}
+
+.tooltip-session {
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  background-color: #fff;
+}
+
+.homepage {
+  max-width: 1240px;
+  margin-left: 15rem;
+}
+.homepage__title {
+  margin: 4rem 0;
+}
+.homepage a {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  color: red;
 }
 
 /*# sourceMappingURL=App.css.map */
