--- a/src/assets/sass/components/layout/_header.scss
+++ b/src/assets/sass/components/layout/_header.scss
@@ -1,11 +1,22 @@
 .navbar {
   display: flex;
-  width: 100%;
-  height: 91px;
-  background-color: black;
-  //position: relative;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 150px 0 20px;
+  height: 90px;
+  background-color: #020203;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  z-index: 60;
+  position: relative;
 
-  &__nav {
+  &__logo {
+    padding-left: 8px;
+  }
 
+  &__navlink {
+    display: flex;
+    color: #fff;
+    text-decoration: none;
+    font-size: 24px;
   }
 }
