--- a/src/assets/sass/components/layout/_sidenav.scss
+++ b/src/assets/sass/components/layout/_sidenav.scss
@@ -1,11 +1,5 @@
 .sidenav {
-  display: flex;
-  flex-direction: column;
-  background-color: black;
-  width: 117px;
-  height: 100vh;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  //position: fixed;
-  //top: 0;
-  //left: 0;
+  overflow: hidden;
+  position: relative;
+  z-index: 10;
 }
