--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,3 +1,5 @@
 @import "./components/layout/sidenav";
 @import "./components/layout/header";
 @import "./components/layout/layout";
+@import "./components/userSession";
+@import "./pages/home";
